Update beliBarang, Main, Clock